--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,9 +4,10 @@ Este documento es para llevar la cuenta de los cambios que ya hice y los que me 
 • Flexbox ----- Header
 • Bootstrap-----Agregado a todas las paginas. Libreria utilizada para iconos en barra de header y links (index). Funcion Hover agregada en header y links. 
 • Responsive ----- Agregado (media query en "Media","Guias" y "Relatos")
-• Mejorar Hero Section--------pendiente
+• Mejorar Hero Section--------Completado
+• SASS---------En proceso
 • Animacion----------pendiente
 • SEO----------pendiente
-• SASS---------pendiente
+
 
 
