--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,9 +5,9 @@ Este documento es para llevar la cuenta de los cambios que ya hice y los que me 
 • Bootstrap-----Agregado a todas las paginas. Libreria utilizada para iconos en barra de header y links (index). Funcion Hover agregada en header y links. 
 • Responsive ----- Agregado (media query en "Media","Guias" y "Relatos")
 • Mejorar Hero Section--------Completado
-• SASS---------En proceso
-• Animacion----------pendiente
-• SEO----------pendiente
+• SASS---------Completado
+• Animacion----------Agregado en h2 (index) y en imagenes (Media page)
+• SEO----------Completado
 
 
 
